//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Permission {
  id Int [pk, increment]
  action String [not null]
  condition Json
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  subjectId Int
  subject Subject
  rolePermissions RolePermission [not null]

  indexes {
    (action, subjectId) [unique]
  }
}

Table Subject {
  id Int [pk, increment]
  name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  permissions Permission [not null]
}

Table RolePermission {
  id Int [pk, increment]
  roleId Int
  permissionId Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  permission Permission
  role Role

  indexes {
    (roleId, permissionId) [unique]
  }
}

Table Role {
  id Int [pk, increment]
  name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  rolePermissions RolePermission [not null]
  user User [not null]
}

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  roleId Int
  name String [not null]
  password String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  role Role
  isVerified Boolean [not null, default: false]
  passwordResetToken String [unique]
  passwordResetAt DateTime
  isSocialLogin Boolean [not null, default: false]
  socialProvider SocialProvider [not null, default: 'NONE']
  Rating Rating [not null]
  teacherCourses Course [not null]
  coursesOnStudents CoursesOnStudents [not null]
  studentProfile StudentProfile
  teacherProfile TeacherProfile
  orders Order [not null]
  wishlist Wishlist
  cart Cart
  paidTransactions Transaction [not null]
  earnedTransactions Transaction [not null]
}

Table CoursesOnStudents {
  course Course [not null]
  courseId Int [not null]
  student User [not null]
  studentId Int [not null]
  assignedAt DateTime [default: `now()`, not null]
  progress Progress [not null]
  progressId Int [not null]
  achievement Achievement

  indexes {
    (courseId, studentId) [pk]
  }
}

Table Progress {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  completedLectures Lecture [not null]
  progressPercentage Float [not null]
  coursesOnStudents CoursesOnStudents [not null]
}

Table Achievement {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  image String [not null]
  coursesOnStudents CoursesOnStudents [not null]
  coursesOnStudentsCourseId Int [not null]
  coursesOnStudentsStudentId Int [not null]

  indexes {
    (coursesOnStudentsCourseId, coursesOnStudentsStudentId) [unique]
  }
}

Table StudentProfile {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  image String
  dob DateTime
  occupation String
  phone String
  institution String
  currentQualification String
  highestQualification String
  user User
  userId Int [unique]
  isEmailUpdates Boolean [not null, default: true]
}

Table TeacherProfile {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  image String
  title String
  biography String
  phoneNumber String
  notifications Json
  socialProfile SocialProfile
  user User
  userId Int [unique]
}

Table SocialProfile {
  id Int [pk, increment]
  website String
  facebook String
  instagram String
  linkedin String
  twitter String
  youtube String
  whatsapp String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  TeacherProfile TeacherProfile [not null]
  teacherProfileId Int [unique, not null]
}

Table Transaction {
  id Int [pk, increment]
  medium PaymentMedium [not null, default: 'ESEWA']
  status Status [not null, default: 'COMPLETED']
  total Int [not null, default: 0]
  course Course [not null]
  courseId Int [not null]
  paidTo User [not null]
  paidToId Int [not null]
  paidBy User [not null]
  paidById Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]

  indexes {
    (courseId, paidById) [unique]
  }
}

Table Rating {
  id Int [pk, increment]
  message String [not null]
  rate Int [not null, default: 0]
  ratedBy User [not null]
  userId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  course Course
  courseId Int
}

Table Course {
  id Int [pk, increment]
  courseId String [unique, not null]
  title String [not null]
  subtitle String [not null]
  price Float
  discountAmount Float
  discountPercent Int
  topic String
  language Language [not null, default: 'ENGLISH']
  subtitleLanguage Language [not null, default: 'ENGLISH']
  level Level [default: 'BEGINNER']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  category courseCategories [not null]
  categoryId Int [not null]
  subCategory courseCategories [not null]
  subCategoryId Int [not null]
  description String
  learnableContent Json
  skills Json
  welcomeMessage String
  congratulationMessage String
  instructors User [not null]
  coursesOnStudents CoursesOnStudents [not null]
  ratings Rating [not null]
  sections Section [not null]
  thumbnail String
  trailer String
  order Order [not null]
  Wishlist Wishlist [not null]
  Cart Cart [not null]
  popularity Int [not null, default: 0]
  transaction Transaction [not null]
}

Table courseCategories {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  name String [unique, not null]
  description String
  parentCategoryId Int
  parentCategory courseCategories
  courseCategory courseCategories [not null]
  mainCourses Course [not null]
  subCourses Course [not null]

  indexes {
    (name, parentCategoryId) [unique]
  }
}

Table Duration {
  id Int [pk, increment]
  time String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table Section {
  id Int [pk, increment]
  name String [not null]
  listOrder Int [not null]
  lectures Lecture [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  Course Course
  courseId Int
}

Table Lecture {
  id Int [pk, increment]
  name String [not null]
  listOrder Int [not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  note Note
  noteId Int [unique]
  section Section [not null]
  sectionId Int [not null]
  length String
  video String
  lecturesViewed Progress [not null]
}

Table Note {
  id Int [pk, increment]
  noteDescription String
  noteFiles Json
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  lecture Lecture
}

Table Order {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  total Int [not null, default: 0]
  course Course [not null]
  user User
  userId Int
}

Table Wishlist {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  course Course [not null]
  user User
  userId Int [unique]
}

Table Cart {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  course Course [not null]
  user User
  userId Int [unique]
}

Enum SocialProvider {
  FACEBOOK
  GOOGLE
  NONE
}

Enum TEACHER_NOTIFICATION_TYPE {
  WHO_BUY_COURSE
  WHO_WRITE_REVIEW
  WHO_COMMENT_COURSE
  WHO_REPLIED_COURSE
  DAILY_PROFILE_VISIT
  WHO_DOWNOAD_COURSE_ATTACHMENT
}

Enum PaymentMedium {
  ESEWA
  KHALTI
  FONEPAY
}

Enum Status {
  COMPLETED
  REQUESTED
}

Enum Language {
  ENGLISH
  NEPALI
}

Enum Level {
  BEGINNER
  INTERMEDIATE
  PROFESSIONAL
}

Ref: Permission.subjectId > Subject.id

Ref: RolePermission.permissionId > Permission.id [delete: Cascade]

Ref: RolePermission.roleId > Role.id [delete: Cascade]

Ref: User.roleId > Role.id

Ref: CoursesOnStudents.courseId > Course.id

Ref: CoursesOnStudents.studentId > User.id

Ref: CoursesOnStudents.progressId > Progress.id

Ref: Achievement.(coursesOnStudentsCourseId, coursesOnStudentsStudentId) - CoursesOnStudents.(courseId, studentId)

Ref: StudentProfile.userId - User.id

Ref: TeacherProfile.userId - User.id

Ref: SocialProfile.teacherProfileId - TeacherProfile.id

Ref: Transaction.courseId > Course.id

Ref: Transaction.paidToId > User.id

Ref: Transaction.paidById > User.id

Ref: Rating.userId > User.id

Ref: Rating.courseId > Course.id

Ref: Course.categoryId > courseCategories.id

Ref: Course.subCategoryId > courseCategories.id

Ref: courseCategories.parentCategoryId - courseCategories.id [delete: No Action]

Ref: Section.courseId > Course.id

Ref: Lecture.noteId - Note.id

Ref: Lecture.sectionId > Section.id

Ref: Order.userId > User.id

Ref: Wishlist.userId - User.id

Ref: Cart.userId - User.id